--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -764,7 +764,8 @@ h4 {
 }
 
 .container-2_plate p {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
 
 .container-2_plates {
