--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -706,7 +706,7 @@ h4 {
 .production_plate p {
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 15px;
+  /* font-size: 15px; */
   line-height: 20px;
   font-family: "RR";
 }
