--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -713,7 +713,7 @@ h4 {
   padding-right: 15px;
   /* font-size: 15px; */
   line-height: 20px;
-  font-family: "RR";
+  font-family: "MM";
 }
 .link-more::after {
   content: '';
