--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -246,7 +246,7 @@ div {
 .close-popup {
   position: relative;
   top: 15%;
-  left: 67%;
+  left: 88%;
   width: 50px;
   margin-right: 40px;
     height: 50px;
@@ -267,10 +267,11 @@ div {
   width: 20px;
   height: 20px;
   /* margin-left: 20px; */
-  background: url(../images/cross.svg)no-repeat center/contain;
+  background: url(../images/button_close.svg)no-repeat center/contain;
 }
 
 .popup-body {
+  position: relative;
   width: 386px;
   margin: auto;
   background: white;
