--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -2234,6 +2234,21 @@ button {
 
 @media screen and (max-width: 1024px) {
 
+  .sub-menu_open .production_plate {
+    height: 20px;
+    width: 130px;
+    margin-top: 25px;
+  }
+
+  .sub-menu_open .production_plate p {
+    line-height: 10px;
+  }
+  
+  .sub-menu_open .production_plate-img {
+    height: 55px;
+    margin-bottom: 10px;
+  }
+
   .container-2_plates .container-2_plate:nth-child(1){
     margin-top: 30px;
   }
