--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -2705,7 +2705,7 @@ button {
     top: 13px;
   }
   .sub-menu_open .production_plate {
-    width: 90px;
+    width: 30%;
   }
   .sub-menu_open .title {
     font-size: 10px;
