--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -302,34 +302,34 @@ div {
 
 
 .production_plate-img5 {
-  background: url(../images/product5.jpg)no-repeat center/contain !important;
+  background: url(../images/Parosin_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img6 {
-  background: url(../images/product6.jpg)no-repeat center/contain !important;
+  background: url(../images/Boston_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img7 {
-  background: url(../images/product7.jpg)no-repeat center/contain !important;
+  background: url(../images/BostonBlistry_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img8 {
-  background: url(../images/product8.jpg)no-repeat center/contain !important;
+  background: url(../images/Masterbond_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img9 {
-  background: url(../images/product9.jpg)no-repeat center/contain !important;
+  background: url(../images/FlowArt_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img10 {
-  background: url(../images/product10.jpg)no-repeat center/contain !important;
+  background: url(../images/FissureSealant_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img11 {
-  background: url(../images/product11.jpg)no-repeat center/contain !important;
+  background: url(../images/BostonGlaze_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img12 {
-  background: url(../images/product12.jpg)no-repeat center/contain !important;
+  background: url(../images/Colorant_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img13 {
-  background: url(../images/product13.jpg)no-repeat center/contain !important;
+  background: url(../images/Silgips_cards_big.png)no-repeat center/contain !important;
 }
 .production_plate-img14 {
-  background: url(../images/product14.jpg)no-repeat center/contain !important;
+  background: url(../images/Muson_cards_big.png)no-repeat center/contain !important;
 }
 
 .production_plate-empty {
@@ -421,7 +421,7 @@ div {
   width: 100%;
   margin-bottom: 60px;
   height: 355px;
-  background: url('../images/product2.jpg')no-repeat center / contain;
+  background: url('../images/Next_cards_big.png')no-repeat center / contain;
 }
 
 h4 {
@@ -2457,72 +2457,72 @@ button {
   .slider-img-0 {
     width: 100%;
     height: 400px;
-    background: url("../images/product1.jpg")no-repeat center/contain !important;
+    background: url("../images/Composit_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-1 {
     width: 100%;
     height: 400px;
-    background: url("../images/product2.jpg")no-repeat center/contain !important;
+    background: url("../images/Next_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-2 {
     width: 100%;
     height: 400px;
-    background: url("../images/product3.jpg")no-repeat center/contain !important;
+    background: url("../images/FlowColort_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-3 {
     width: 100%;
     height: 400px;
-    background: url("../images/product4.jpg")no-repeat center/contain !important;
+    background: url("../images/Etchmaster_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-4 {
     width: 100%;
     height: 400px;
-    background: url("../images/product5.jpg")no-repeat center/contain !important;
+    background: url("../images/Parosin_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-5 {
     width: 100%;
     height: 400px;
-    background: url("../images/product6.jpg")no-repeat center/contain !important;
+    background: url("../images/Boston_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-6 {
     width: 100%;
     height: 400px;
-    background: url("../images/product7.jpg")no-repeat center/contain !important;
+    background: url("../images/BostonBlistry_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-7 {
     width: 100%;
     height: 400px;
-    background: url("../images/product8.jpg")no-repeat center/contain !important;
+    background: url("../images/Masterbond_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-8 {
     width: 100%;
     height: 400px;
-    background: url("../images/product9.jpg")no-repeat center/contain !important;
+    background: url("../images/FlowArt_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-9 {
     width: 100%;
     height: 400px;
-    background: url("../images/product10.jpg")no-repeat center/contain !important;
+    background: url("../images/FissureSealant_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-10 {
     width: 100%;
     height: 400px;
-    background: url("../images/product11.jpg")no-repeat center/contain !important;
+    background: url("../images/BostonGlaze_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-11 {
     width: 100%;
     height: 400px;
-    background: url("../images/product12.jpg")no-repeat center/contain !important;
+    background: url("../images/Colorant_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-12 {
     width: 100%;
     height: 400px;
-    background: url("../images/product13.jpg")no-repeat center/contain !important;
+    background: url("../images/Silgips_cards_big.png")no-repeat center/contain !important;
   }
   .slider-img-13 {
     width: 100%;
     height: 400px;
-    background: url("../images/product14.jpg")no-repeat center/contain !important;
+    background: url("../images/Muson_cards_big.png")no-repeat center/contain !important;
   }
 
 
@@ -2565,49 +2565,49 @@ button {
     display: block;
     width: 100vw;
     height: 360px;
-    background: url(../images/product2.jpg)no-repeat center/contain;
+    background: url(../images/Next_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob1 {
-    background: url(../images/product1.jpg)no-repeat center/contain;
+    background: url(../images/Composit_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob2 {
-    background: url(../images/product2.jpg)no-repeat center/contain;
+    background: url(../images/Next_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob3 {
-    background: url(../images/product3.jpg)no-repeat center/contain;
+    background: url(../images/FlowColort_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob4 {
-    background: url(../images/product4.jpg)no-repeat center/contain;
+    background: url(../images/Etchmaster_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob5 {
-    background: url(../images/product5.jpg)no-repeat center/contain;
+    background: url(../images/Parosin_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob6 {
-    background: url(../images/product6.jpg)no-repeat center/contain;
+    background: url(../images/Boston_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob7 {
-    background: url(../images/product7.jpg)no-repeat center/contain;
+    background: url(../images/BostonBlistry_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob8 {
-    background: url(../images/product8.jpg)no-repeat center/contain;
+    background: url(../images/Masterbond_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob9 {
-    background: url(../images/product9.jpg)no-repeat center/contain;
+    background: url(../images/FlowArt_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob10 {
-    background: url(../images/product10.jpg)no-repeat center/contain;
+    background: url(../images/FissureSealant_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob11 {
-    background: url(../images/product11.jpg)no-repeat center/contain;
+    background: url(../images/BostonGlaze_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob12 {
-    background: url(../images/product12.jpg)no-repeat center/contain;
+    background: url(../images/Colorant_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob13 {
-    background: url(../images/product13.jpg)no-repeat center/contain;
+    background: url(../images/Silgips_cards_big.png)no-repeat center/contain;
   }
   .product-img-mob14 {
-    background: url(../images/product14.jpg)no-repeat center/contain;
+    background: url(../images/Muson_cards_big.png)no-repeat center/contain;
   }
 
   .product-body_left-btn-mob {
